[ADD] Added OMP version for RMA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,18 +67,17 @@ ADD_CUSTOM_TARGET(
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
 
-# TODO
 # RMA version with OpenMP
-#SET(RMA_OMP_EXECUTABLE RMA)
-#FILE(GLOB RMA_OMP_SOURCES "${PROJECT_SOURCE_DIR}/rma_omp.cpp")
-#ADD_EXECUTABLE(${RMA_OMP_EXECUTABLE} ${RMA_OMP_SOURCES} ${COMMON_FILES})
-#TARGET_LINK_LIBRARIES(${RMA_OMP_EXECUTABLE} ${IMPORTS})
-#ADD_CUSTOM_TARGET(
-#        run_rma_omp
-#        COMMAND mpirun -np ${PROC_QUANTITY} ${RMA_OMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
-#        DEPENDS ${RMA_OMP_EXECUTABLE}
-#        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
-#)
+SET(RMA_OMP_EXECUTABLE RMA_OMP)
+FILE(GLOB RMA_OMP_SOURCES "${PROJECT_SOURCE_DIR}/rma_omp.cpp")
+ADD_EXECUTABLE(${RMA_OMP_EXECUTABLE} ${RMA_OMP_SOURCES} ${COMMON_FILES})
+TARGET_LINK_LIBRARIES(${RMA_OMP_EXECUTABLE} ${IMPORTS})
+ADD_CUSTOM_TARGET(
+        run_rma_omp
+        COMMAND mpirun -np ${PROC_QUANTITY} ${RMA_OMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
+        DEPENDS ${RMA_OMP_EXECUTABLE}
+        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
+)
 
 # Master/Slave version (MPI 3: Master/Slave)
 SET(MS_EXECUTABLE MS_MASTER)
