[FIX] Fixed Master/Slave version & added oversubscribe option for custom targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ ADD_EXECUTABLE(${VANILLA_EXECUTABLE} ${VANILLA_SOURCES} ${COMMON_FILES})
 TARGET_LINK_LIBRARIES(${VANILLA_EXECUTABLE} ${IMPORTS})
 ADD_CUSTOM_TARGET(
         run_vanilla
-        COMMAND mpirun -np ${PROC_QUANTITY} ${VANILLA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
+        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${VANILLA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
         DEPENDS ${VANILLA_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
@@ -50,7 +50,7 @@ ADD_EXECUTABLE(${OPENMP_EXECUTABLE} ${OMP_SOURCES} ${COMMON_FILES})
 TARGET_LINK_LIBRARIES(${OPENMP_EXECUTABLE} ${IMPORTS})
 ADD_CUSTOM_TARGET(
         run_omp
-        COMMAND mpirun -np ${PROC_QUANTITY} ${OPENMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
+        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${OPENMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
         DEPENDS ${OPENMP_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
@@ -62,7 +62,7 @@ ADD_EXECUTABLE(${RMA_EXECUTABLE} ${RMA_SOURCES} ${COMMON_FILES})
 TARGET_LINK_LIBRARIES(${RMA_EXECUTABLE} ${IMPORTS})
 ADD_CUSTOM_TARGET(
         run_rma
-        COMMAND mpirun -np ${PROC_QUANTITY} ${RMA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
+        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${RMA_EXECUTABLE} ${DEFAULT_ARGUMENTS}
         DEPENDS ${RMA_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
@@ -74,7 +74,7 @@ ADD_EXECUTABLE(${RMA_OMP_EXECUTABLE} ${RMA_OMP_SOURCES} ${COMMON_FILES})
 TARGET_LINK_LIBRARIES(${RMA_OMP_EXECUTABLE} ${IMPORTS})
 ADD_CUSTOM_TARGET(
         run_rma_omp
-        COMMAND mpirun -np ${PROC_QUANTITY} ${RMA_OMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
+        COMMAND mpirun -np ${PROC_QUANTITY} --oversubscribe ${RMA_OMP_EXECUTABLE} ${DEFAULT_ARGUMENTS}
         DEPENDS ${RMA_OMP_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
@@ -90,7 +90,7 @@ TARGET_LINK_LIBRARIES(${MS_EXECUTABLE} ${IMPORTS})
 TARGET_LINK_LIBRARIES(${MS_SLAVE} ${IMPORTS})
 ADD_CUSTOM_TARGET(
         run_ms
-        COMMAND mpirun -np 1 ${MS_EXECUTABLE} ${MS_ARGUMENTS} ${MS_SLAVE}
+        COMMAND mpirun -np 1 --oversubscribe ${MS_EXECUTABLE} ${MS_ARGUMENTS} ${MS_SLAVE}
         DEPENDS ${MS_EXECUTABLE} ${MS_SLAVE}
         WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
@@ -107,7 +107,7 @@ ADD_CUSTOM_TARGET(
 #TARGET_LINK_LIBRARIES(${MS_OMP_SLAVE} ${IMPORTS})
 #ADD_CUSTOM_TARGET(
 #        run_ms_omp
-#        COMMAND mpirun -np 1 ${MS_OMP_EXECUTABLE} ${MS_ARGUMENTS} ${MS_OMP_SLAVE}
+#        COMMAND mpirun -np 1 --oversubscribe ${MS_OMP_EXECUTABLE} ${MS_ARGUMENTS} ${MS_OMP_SLAVE}
 #        DEPENDS ${MS_OMP_EXECUTABLE} ${MS_OMP_SLAVE}
 #        WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 #)
